; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/pohmelfs/extr_net.c_netfs_poll_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/pohmelfs/extr_net.c_netfs_poll_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netfs_state = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (i32*, %struct.TYPE_4__*, i32*)* }
%struct.netfs_poll_helper = type { i32, %struct.netfs_state* }

@netfs_queue_func = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.netfs_state*)* @netfs_poll_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @netfs_poll_init(%struct.netfs_state* %0) #0 {
  %2 = alloca %struct.netfs_state*, align 8
  %3 = alloca %struct.netfs_poll_helper, align 8
  store %struct.netfs_state* %0, %struct.netfs_state** %2, align 8
  %4 = load %struct.netfs_state*, %struct.netfs_state** %2, align 8
  %5 = getelementptr inbounds %struct.netfs_poll_helper, %struct.netfs_poll_helper* %3, i32 0, i32 1
  store %struct.netfs_state* %4, %struct.netfs_state** %5, align 8
  %6 = getelementptr inbounds %struct.netfs_poll_helper, %struct.netfs_poll_helper* %3, i32 0, i32 0
  %7 = call i32 @init_poll_funcptr(i32* %6, i32* @netfs_queue_func)
  %8 = load %struct.netfs_state*, %struct.netfs_state** %2, align 8
  %9 = getelementptr inbounds %struct.netfs_state, %struct.netfs_state* %8, i32 0, i32 0
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32 (i32*, %struct.TYPE_4__*, i32*)*, i32 (i32*, %struct.TYPE_4__*, i32*)** %13, align 8
  %15 = load %struct.netfs_state*, %struct.netfs_state** %2, align 8
  %16 = getelementptr inbounds %struct.netfs_state, %struct.netfs_state* %15, i32 0, i32 0
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %18 = getelementptr inbounds %struct.netfs_poll_helper, %struct.netfs_poll_helper* %3, i32 0, i32 0
  %19 = call i32 %14(i32* null, %struct.TYPE_4__* %17, i32* %18)
  ret i32 0
}

declare dso_local i32 @init_poll_funcptr(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
